Fixing boxes to the grid to allow better alignment. Updating LocalConnection to the game. Adding a "capture" button to the zone coordinates form. Adding tooltip to the ActionType form place holders. Removing default "startDrag()" behavior from the Boxes to allow position's rounding.

--- a/deploy/css/flashstyles.css
+++ b/deploy/css/flashstyles.css
@@ -3,7 +3,7 @@
 .errorBig { font-family:Verdana; font-weight:bold; font-size:14; color:#cc0000; }
 
 .link { color:#CC0000; text-decoration:underline; }
-.tooltipContent { font-family:Verdana; font-size:10; color:#ffffff; }
+.tooltipContent { font-family:Verdana; font-size:12; color:#ffffff; }
 .tooltipContentBig { font-family:Verdana; font-size:17; color:#ffffff; }
 .tooltipContentWarn { font-family:Verdana; font-weight:bold; font-size:10; color:#aa0000; }
 
@@ -50,4 +50,4 @@
 
 .box-label { font-family:Verdana; font-size:10; color:#ffffff; }
 
-.item-label { font-family:Verdana; font-size:14; color:#ffffff; }
+.selectorItem-label { font-family:Verdana; font-size:14; color:#ffffff; text-align:center; }
